In .env, add sql database credentials example

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 api_key = "your_api_key_here"
+
+# Your SQL database credentials
+SQL_USERNAME="your_sql_username_here"
+SQL_PASSWORD="your_sql_password_here"
