In .env, capitalize api key name

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-api_key = "your_api_key_here"
+# Your API key 
+API_KEY="your_api_key_here"
 
 # Your SQL database credentials
 SQL_USERNAME="your_sql_username_here"
