--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
+# .env file example for storing sensitive information securely
+
 # Your API key 
 API_KEY="your_api_key_here"
 
 # Your SQL database credentials
 SQL_USERNAME="your_sql_username_here"
 SQL_PASSWORD="your_sql_password_here"
+
+# Optional: Add other environment variables as needed
+# ENVIRONMENT_VARIABLE="your_value_here"
