--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 numpy==2.1.3
 pandas==2.2.3
-python-dotenv==1.0.1
+matplotlib==3.9.2
+seaborn==0.13.2
 sqlalchemy==2.0.36 
 mysql-connector-python==9.1.0
+python-dotenv==1.0.1
