--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==2.1.3
 pandas==2.2.3
 matplotlib==3.9.2
 seaborn==0.13.2
+scikit-learn==1.5.2
 sqlalchemy==2.0.36 
 mysql-connector-python==9.1.0
 python-dotenv==1.0.1
