--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ pandas==2.2.3
 matplotlib==3.9.2
 seaborn==0.13.2
 scikit-learn==1.5.2
+xgboost==2.1.2
 sqlalchemy==2.0.36 
 mysql-connector-python==9.1.0
 python-dotenv==1.0.1
