--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 # .env file example for storing sensitive information securely
 
 # Your API key 
-API_KEY="your_api_key_here"
+API_KEY=your_api_key_here
 
 # Your SQL database credentials
-SQL_USERNAME="your_sql_username_here"
-SQL_PASSWORD="your_sql_password_here"
+SQL_USERNAME=your_sql_username_here
+SQL_PASSWORD=your_sql_password_here
 
 # Optional: Add other environment variables as needed
-# ENVIRONMENT_VARIABLE="your_value_here"
+# ENVIRONMENT_VARIABLE_1=your_value_here
+# ENVIRONMENT_VARIABLE_2="your value here"  # use quotes for values with spaces or special characters
