In .env: Uncomment the example environment variables

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ SQL_USERNAME=your_sql_username_here
 SQL_PASSWORD=your_sql_password_here
 
 # Optional: Add other environment variables as needed
-# ENVIRONMENT_VARIABLE_1=your_value_here
-# ENVIRONMENT_VARIABLE_2="your value here"  # use quotes for values with spaces or special characters
+ENVIRONMENT_VARIABLE_1=your_value_here
+ENVIRONMENT_VARIABLE_2="your value here"  # use quotes for values with spaces or special characters
